<resources>
    <string name="app_name">Tsū</string>
    <string name="terms_and_conditions"><![CDATA[I agree to Tsū\'s <a href=\'http://tsu.social/terms\'>Terms \u0026 Conditions</a> \u0026 <a href=\'http://tsu.social/privacy\'>Privacy Policy</a>. I may receive emails from Tsū which I can unsubscribe at any time]]></string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome">Welcome ABOARD!</string>
    <string name="login_header">Welcome Back</string>
    <string name="sign_in">Sign in</string>
    <string name="hint_first_name">FIRST NAME</string>
    <string name="hint_last_name">LAST NAME</string>
    <string name="hint_email">EMAIL</string>
    <string name="hint_username">CHOOSE A USERNAME</string>
    <string name="hint_username_email">EMAIL</string>
    <string name="hint_password">PASSWORD</string>
    <string name="hint_birthdate">BIRTHDATE</string>
    <string name="remember_me">REMEMBER ME</string>
    <string name="unchecked_terms_error">Oops! You must agree to our Terms of Service before proceeding</string>
    <string name="button_login_text">Login</string>
    <string name="button_forgot_password">Forgot your password?</string>
    <string name="signup_email_validation_error">Oops! That email address is not valid. Please re-enter</string>
    <string name="signup_password_validation_error">Oops! Your password must be between 8 and 128 characters in length with at least 1 uppercase, 1 lowercase, 1 digit and 1 special character in #?!|@$%^&amp;*-.[]</string>
    <string name="signup_username_validation_error">Oops! Your username must be between 3–30 characters and contain only letters, numbers, or an underscore</string>
    <string name="signup_invited_by_username_validation_error">Oops! Username must be between 3–30 characters and contain only letters, numbers, or an underscore</string>
    <string name="signup_first_name_validation_error">Oops! That first name is not valid. Please re-enter</string>
    <string name="signup_last_name_validation_error">Oops! That last name is not valid. Please re-enter</string>
    <string name="signup_birthdate_validation_error">Oops! You must 17 years or older to join Tsū</string>
    <string name="signup_empty_field_validation_error">Oops! Please complete all fields.</string>
    <string name="signup_passwords_not_match_error">Oops! Passwords don\'t match</string>
    <string name="requested">Requested</string>
    <string name="respond">Respond</string>
    <string name="friends">Friends</string>
    <string name="unfriend">Unfriend</string>
    <string name="pending">Pending</string>
    <string name="add_friend">Friend</string>
    <string name="notification_badge_overflow">%d+</string>
    <string name="incorrect_password">Incorrect Password</string>
    <string name="password_attempt">attempts left after which you must wait 24 hours before making another deletion request</string>
    <string name="password_field_empty">Password field can\'t be empty</string>
    <string name="user_is_friend_btn">Friend</string>
    <string name="user_is_you_btn">You</string>
    <string name="user_is_following_btn">Following</string>
    <string name="toolbar_title_likes">Likes</string>
    <string name="toolbar_title_supporters">Supporters</string>
    <string name="likes_list_title_many">Post has %d likes</string>
    <string name="likes_list_title_one">Post has 1 like</string>
    <string name="supporters_list_title_many">Post has %d Supporters</string>
    <string name="supporters_list_title_one">Post has 1 Supporter</string>
    <string name="post_share_info">%s shared a post</string>
    <string name="post_user_updated_profile">%s updated their profile</string>
    <string name="error_unsuccessful_login">Oops! We are unable to log you in with that email and password. Please try again.</string>
    <string name="error_create_account">Oops! We are unable to create your account</string>
    <string name="error_invite">Oops! Failed to invite user</string>
    <string name="nav_home">Home</string>
    <string name="nav_compose">Compose</string>
    <string name="nav_messages">Messages</string>
    <string name="nav_profile">Profile</string>
    <string name="permission_not_granted">Permission was not granted</string>
    <string name="permission_alert_title">Permission Request</string>
    <string name="permission_rational_camera">Tsū would like access to your camera so you can post a photo to your feed</string>
    <string name="alert_positive">YES</string>
    <string name="alert_negative">NO</string>
    <string name="btn_follow_txt">Follow</string>
    <string name="btn_unfollow_txt">Unfollow</string>
    <string name="btn_following_txt">Following</string>
    <string name="switch_camera_button_alt">camera</string>
    <string name="capture_button_alt">snap</string>
    <string name="gallery_button_alt">photo gallery</string>
    <string name="back_button_alt">Back</string>
    <string name="share_button_alt">Share</string>
    <string name="delete_button_alt">Delete</string>
    <string name="delete_title">Delete</string>
    <string name="delete_dialog">Are you sure you want to delete?</string>
    <string name="share_hint">Share...</string>
    <string name="accept">Accept</string>
    <string name="accept_uncapitalized">Accept</string>
    <string name="decline">Decline</string>
    <string name="drawer_item_logout">Sign Out</string>
    <string name="drawer_item_account">Account</string>
    <string name="drawer_item_account_settings">Account Settings</string>
    <string name="drawer_item_analytics">Insights</string>
    <string name="drawer_item_bank">Bank</string>
    <string name="drawer_item_general">General</string>
    <string name="drawer_item_information">Information</string>
    <string name="drawer_item_invite">Invite Your Friend</string>
    <string name="drawer_item_notifications">Notification Settings</string>
    <string name="drawer_item_profile">Profile Information</string>
    <string name="drawer_item_select_account">Select Account</string>
    <string name="drawer_item_support">Customer Care</string>
    <string name="drawer_item_version">Version: %s</string>
    <string name="drawer_item_build">Build: %d</string>
    <string name="settings_title">General Settings</string>
    <string name="profile_picture_desc">This photo is your identity on tsū.  It will appear when you create content.</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="cover_picture">Cover Picture</string>
    <string name="cover_picture_desc">This photo will appear on top of your profile page.</string>
    <string-array name="relationship_status">
        <item>I don\'t want to say</item>
        <item>Single</item>
        <item>In a relationship</item>
        <item>Engaged</item>
        <item>Married</item>
        <item>It\'s complicated</item>
        <item>Widowed</item>
        <item>Partner</item>
        <item>Open Relationship</item>
        <item>Co-habitate</item>
    </string-array>
    <string name="relationship_with">To</string>
    <string name="youtube_channel">youtube.com/</string>
    <string name="facebook_page">facebook.com/</string>
    <string name="instagram_help">instagram.com/</string>
    <string name="enter_your_bio">Your profile bio displays up to 160 characters</string>
    <string name="username_small">username</string>
    <string name="save">Save</string>
    <string name="btn_proceed">Proceed</string>
    <string name="btn_delete">Delete Account</string>
    <string name="welcome_back_edit_profile">Welcome back! Let\'s get your\n profile spruced up.</string>
    <string name="bio_error_message">Reached limit</string>
    <string name="warning_title">Please Be Aware</string>
    <string name="warning_description">You are changing your username. Your old invite links will no longer work. You will find your new invite link in the menu.</string>
    <string name="delete">Delete</string>
    <string name="areYouSureDeletePost">Are you sure you want to delete this post?</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string-array name="payout_choices">
        <item>PayPal</item>
    </string-array>
    <string name="ad_attribution">Sponsored</string>
    <string name="upload_video_text">Uploading video…</string>
    <string name="upload_video_complete_text">Upload complete.</string>
    <string name="bank">Bank</string>
    <string name="bank_account_title">Bank Account</string>
    <string name="redeem">Redeem</string>
    <string name="in_my_account">In my account</string>
    <string name="yesterday_balance">Yesterday</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="payments_policy">Payments Policy</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="awards_program">Awards Program</string>
    <string name="comment_count_many">%d Comments</string>
    <string name="comment_count_one">1 Comment</string>
    <string name="like_count_many">%d Likes</string>
    <string name="like_count_one">1 Like</string>
    <string name="share_count_many">%d Shares</string>
    <string name="share_count_one">1 Share</string>
    <string name="support_count_many">%d Supporters</string>
    <string name="support_count_one">1 Supporter</string>
    <string name="drawer_invite_friends">Invite Your Friends</string>
    <string name="invite_method_dialog_title">Invite</string>
    <string name="invite_subject">Invitation To Join Tsū</string>
    <string name="invite_message">Hey, come join me at Tsū, the social that pays! \n Tell them @%1$s sent you. \n %2$s</string>
    <string name="general_error">An error has occurred</string>
    <string name="contact_reason">need contacts</string>
    <string name="invite">Invite</string>
    <string name="invited">Invited</string>
    <string name="search">Search</string>
    <string name="signup_username_exists">Oops! That username is already in use.</string>
    <string name="reset_password_enter_email_message">Please enter your email and we\'ll send you a one-time code to reset your password</string>
    <string name="enter_email">ENTER EMAIL</string>
    <string name="send_one_time_code">SEND ONE-TIME CODE</string>
    <string name="reset_password_one_time_code_message">Please check your email for a message containing your one-time code. Enter it here.</string>
    <string name="create_post_photo_btn">Add Photo</string>
    <string name="create_post_video_btn">Add Video</string>
    <string name="create_post_hint">What\'s on your mind?</string>
    <string name="create_post_visibility">Visibility</string>
    <string name="create_post_public_msg">Anyone can see this post.</string>
    <string name="photo">Photo</string>
    <string name="video">Video</string>
    <string name="select_media_file">Select Media File</string>
    <string name="test_text" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="notifications">Notifications</string>
    <string name="community">Community</string>
    <string name="community_public">Public</string>
    <string name="community_private">Private</string>
    <string name="community_exclusive">Exclusive</string>
    <string name="dialog_block_btn">Block %s</string>
    <string name="dialog_message_btn">Message %s</string>
    <string name="dialog_unfollow_btn">Unfollow %s</string>
    <string name="dialog_unfriend_btn">Unfriend %s</string>
    <string name="support">Customer Care</string>
    <string name="flag">Flag</string>
    <string name="mute">Mute</string>
    <string name="ban">Ban</string>
    <string name="personalized_ads">Personalized Ads</string>
    <string name="text">Text</string>
</resources>