<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/post_types_graph"
    app:startDestination="@id/photoCaptureFragment2">


    <fragment
        android:id="@+id/textMediaFragment"
        android:name="social.tsu.android.ui.new_post.TextMediaFragment"
        android:label="@string/text" />

    <fragment
        android:id="@+id/photoCaptureFragment2"
        android:name="social.tsu.android.ui.new_post.PhotoCaptureFragment"
        android:label="@string/photo" />
    <fragment
        android:id="@+id/videoCaptureFragment2"
        android:name="social.tsu.android.ui.new_post.VideoCaptureFragment"
        android:label="@string/video" />
    <fragment
        android:id="@+id/mediaGridFragment"
        android:name="social.tsu.android.ui.new_post.library.MediaGridFragment"
        android:label="" >
        <argument
            android:name="mediaList"
            app:argType="social.tsu.android.ui.new_post.library.LibraryMedia[]" />
        <argument
            android:name="title"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/mediaLibraryLayout_id"
        android:name="social.tsu.android.ui.new_post.library.MediaLibraryFragment"
        android:label="@string/select_media_file" >
        <action
            android:id="@+id/next"
            app:destination="@id/mediaGridFragment" />
    </fragment>
</navigation>