<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/margin_default_small">

    <LinearLayout
        style="@style/TSUBottomDialog.Container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dialog_message_button"
            style="@style/TSUBottomDialog.Item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_message_btn" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider_default" />

        <TextView
            android:id="@+id/dialog_follow_button"
            style="@style/TSUBottomDialog.Item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_unfollow_btn" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider_default" />

        <TextView
            android:id="@+id/dialog_unfriend_button"
            style="@style/TSUBottomDialog.Item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_unfriend_btn" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider_default" />

        <TextView
            android:id="@+id/dialog_block_button"
            style="@style/TSUBottomDialog.Item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_block_btn"
            android:textColor="@color/tsu_primary" />

    </LinearLayout>

    <LinearLayout
        style="@style/TSUBottomDialog.Container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_default_small"
        android:layout_marginBottom="@dimen/margin_default_small">

        <TextView
            android:id="@+id/dialog_cancel_button"
            style="@style/TSUBottomDialog.Item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />

    </LinearLayout>

</LinearLayout>
