<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="viewModel"
            type="com.getstream.sdk.chat.viewmodel.ChannelViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/margin_default_small">

        <LinearLayout
            style="@style/TSUBottomDialog.Container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/dialog_flag_button"
                style="@style/TSUBottomDialog.Item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/flag"
                android:textColor="@color/bottom_sheet_item_text_color" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/divider_default" />

            <TextView
                android:id="@+id/dialog_mute_button"
                style="@style/TSUBottomDialog.Item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mute"
                android:textColor="@color/bottom_sheet_item_text_color" />

            <View
                android:id="@+id/ban_mute_options_divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:visibility="gone"
                android:background="@color/divider_default" />

            <TextView
                android:id="@+id/dialog_ban_button"
                style="@style/TSUBottomDialog.Item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:text="@string/ban"
                android:textColor="@color/red" />

        </LinearLayout>

        <LinearLayout
            style="@style/TSUBottomDialog.Container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_default_small"
            android:layout_marginBottom="@dimen/margin_default_small">

            <TextView
                android:id="@+id/dialog_cancel_button"
                style="@style/TSUBottomDialog.Item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cancel" />

        </LinearLayout>

    </LinearLayout>
</layout>
